# brain-autoresearch

./: DEPLOYMENT_STATUS.md  QUICK_START.md  README.md  README_BRAIN.md  brain_demo.py  brain_experiment.py  brain_live.py  brain_metrics.py  brain_program.md  live_brain_session_130305.json  program.md  pyproject.toml  pyproject_brain_mac.toml  setup_brain_mac.py  setup_brain_research.sh  train.py  train_brain.py
experiments/: brain_presets.py
