[project]
name = "brain-autoresearch"
version = "0.1.0"
description = "Brain-inspired autonomous pretraining research with efficiency patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.0.0",
    "psutil>=5.9.0",
]

# Intel Mac compatibility: prefer CPU version, fallback to CUDA
[tool.uv.sources]
torch = [
    { index = "pytorch", platform_machine = "x86_64", platform_system = "Darwin" },
    { index = "pytorch-cu128", platform_machine = "x86_64", platform_system = "Linux" },
    { index = "pytorch", platform_machine = "arm64" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
